--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,10 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Righteous&display=swap");
+@import url("http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css");
 
 /* Button-Color= #ff6b81 */
 /* Background-color= #ece9e6;*/
 * {
   padding: 0;
   margin: 0;
+}
+body {
   font-size: 24px;
   font-family: "Righteous", cursive;
 }
@@ -22,9 +25,9 @@
   transition: all 500ms ease-in-out;
 }
 
-#sidebar.active {
+/* #sidebar.active {
   left: 0px;
-}
+} */
 
 #sidebar ul li {
   list-style: none;
@@ -43,28 +46,36 @@
   cursor: pointer;
   background: #2bcbba;
 }
-#sidebar .toggle-btn {
+#sidebar #toggle-btn {
   position: absolute;
   left: 230px;
   top: 20px;
   cursor: pointer;
 }
 
-#sidebar .toggle-btn span {
-  display: block;
-  width: 30px;
-  height: 5px;
-  background: #797979;
-  margin: 3px 5px;
+.ion-close-round,
+.ion-navicon-round {
+  color: #797979;
+  font-size: 180%;
+}
+.menutext {
+  position: relative;
+  left: 60px;
+  top: -45px;
 }
 
 /*---------------------------------------------*/
 /*-------------------HEADER--------------------*/
 /*---------------------------------------------*/
 
+i {
+  font-size: 200%;
+  color: #797979;
+}
+
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(/resources/css/img/Traveling.jpg);
+    url(/resources/css/img/raquel-garcia-BAiSZDx4LgE-unsplash-min.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -91,11 +102,14 @@ header {
   right: 180px;
   padding: 20px 30px 20px 30px;
   background-color: #2bcbba;
+  font-family: "Righteous", cursive;
   position: absolute;
   border: none;
   border-radius: 5px;
   color: white;
   cursor: pointer;
+  font-size: 100%;
+  outline: none;
 }
 
 .home-register {
@@ -108,6 +122,9 @@ header {
   border-radius: 5px;
   color: white;
   cursor: pointer;
+  font-family: "Righteous", cursive;
+  font-size: 100%;
+  outline: none;
 }
 
 .home-login:hover,
@@ -116,6 +133,7 @@ header {
 .home-login:active {
   background-color: white;
   color: #2bcbba;
+  transition: background-color 0.4s ease-out;
 }
 /* ---------------------------------------------- */
 /* -----------------FIRST SECTION---------------- */
@@ -151,10 +169,42 @@ h2::after {
 
 .reasons-para {
   text-align: justify;
-  margin: 100px 80px 0px 90px;
+  margin: 100px 80px 10px 90px;
+  font-family: "Righteous", cursive;
+  text-decoration: italic;
+  font-size: 120%;
 }
 
-img {
-  border-radius: 5px;
-  border: 1px black;
+/* ---------------------------------------------- */
+/* -----------------SECOND SECTION---------------- */
+/* ---------------------------------------------- */
+
+.second-section {
+  margin-bottom: 100px;
+}
+
+.firstImage {
+  overflow: hidden;
+  margin-bottom: 0px;
+}
+
+.SecondImage {
+  float: right;
+  /* padding-top: 500px; */
+}
+
+.description1 {
+  width: 40%;
+  height: 0;
+  text-align: justify;
+  margin: 8% 4% 0 0;
+  float: right;
+}
+
+.description2 {
+  width: 40%;
+  height: auto;
+  text-align: justify;
+  margin: 8% 4% 0 0;
+  float: right;
 }
