--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Righteous&display=swap");
 @import url("http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css");
 
-/* Button-Color= #ff6b81 */
-/* Background-color= #ece9e6;*/
+/* ----------Button-Color= #2bcbba------------  */
+/* ----------Background-color= #ece9e6---------- */
 * {
   padding: 0;
   margin: 0;
@@ -75,7 +75,7 @@ i {
 
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(/resources/css/img/raquel-garcia-BAiSZDx4LgE-unsplash-min.jpg);
+    url(/resources/css/img/TitleBG.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -83,7 +83,7 @@ header {
 }
 
 .title {
-  color: white;
+  color: #ececec;
   font-size: 500%;
   text-align: center;
   font-family: "Righteous", cursive;
@@ -93,11 +93,12 @@ header {
 }
 
 .tag-line {
-  color: white;
+  color: #ece9e6;
   text-align: center;
 }
 
-.home-login {
+.home-login,
+.home-register {
   top: 15px;
   right: 180px;
   padding: 20px 30px 20px 30px;
@@ -110,30 +111,22 @@ header {
   cursor: pointer;
   font-size: 100%;
   outline: none;
+  background: linear-gradient(to right, white 50%, #2bcbba 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all 0.3s ease-out;
 }
 
 .home-register {
-  top: 15px;
   right: 15px;
-  padding: 20px 30px 20px 30px;
-  background-color: #2bcbba;
-  position: absolute;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  cursor: pointer;
-  font-family: "Righteous", cursive;
-  font-size: 100%;
-  outline: none;
 }
 
 .home-login:hover,
 .home-login:active,
 .home-register:hover,
-.home-login:active {
-  background-color: white;
+.home-register:active {
+  background-position: left bottom;
   color: #2bcbba;
-  transition: background-color 0.4s ease-out;
 }
 /* ---------------------------------------------- */
 /* -----------------FIRST SECTION---------------- */
@@ -141,9 +134,11 @@ header {
 
 .first-section {
   height: 100vh;
-  background: #ece9e6;
-  background: -webkit-linear-gradient(to right, #ffffff, #ece9e6);
-  background: linear-gradient(to right, #ffffff, #ece9e6);
+  /* background: #ceccca;
+  background: -webkit-linear-gradient(to right, #ffffff, #ceccca);
+  background: linear-gradient(to right, #ffffff, #ceccca); */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)),
+    url(/resources/css/img/World.jpg);
 }
 
 .section-title {
@@ -176,15 +171,20 @@ h2::after {
 }
 
 /* ---------------------------------------------- */
-/* -----------------SECOND SECTION---------------- */
+/* -----------------SECOND SECTION--------------- */
 /* ---------------------------------------------- */
 
 .second-section {
-  margin-bottom: 100px;
+  height: 100vh;
+  background-color: #ececec;
+}
+.section1-images img {
+  width: 50%;
+  height: 400px;
 }
 
 .firstImage {
-  overflow: hidden;
+  overflow: show;
   margin-bottom: 0px;
 }
 
@@ -205,6 +205,23 @@ h2::after {
   width: 40%;
   height: auto;
   text-align: justify;
-  margin: 8% 4% 0 0;
+  margin: 8% 4% 0% 0;
   float: right;
+}
+
+/* ---------------------------------------------------- */
+/* -----------------Scroll Bar Settings--------------- */
+/* -------------------------------------------------- */
+
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: #2bcbba;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background-color: grey;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 3px gray;
+  border-radius: 10px;
 }
