--- a/resources/css/Register.css
+++ b/resources/css/Register.css
@@ -1,43 +1,41 @@
-*{
+@import url("https://fonts.googleapis.com/css?family=Righteous&display=swap");
+
+* {
   padding: 0;
   margin: 0;
+  font-family: "Righteous", cursive;
 }
 
+/* header {
+  background-image: url("/Bon-Voyage/resources/css/img/LoginBG.jpg");
 
-
-/* header{
-  background-image:  url("/Bon-Voyage/resources/css/img/LoginBG.jpg");
-  
-       height: 100vh;
-      background-attachment: fixed;
-      background-position: center;
-       background-size: cover;
-       filter: blur(2px);
+  height: 100vh;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  filter: blur(2px);
   -webkit-filter: blur(2px);
-
 } */
-.BG-img{
-  background-image:  url("/resources/css/img/LoginBG.jpg");
-  
-       height: 100vh;
-      background-attachment: fixed;
-      background-position: center;
-       background-size: cover;
-    
-       filter: blur(10px);
-    z-index: -1;
-    -webkit-animation: fadein 2s;
+
+.BG-img {
+  background-image: url("/resources/css/img/TitleBG.jpg");
+  /* background: no-repeat center center fixed; */
+  height: 100vh;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  filter: blur(10px);
+  z-index: -1;
+  -webkit-animation: fadein 2s;
   animation: fadein 2s;
 }
 
-
-.details{ 
-  
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,200, 0.4); 
+.details {
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(201, 201, 201, 0.603);
   color: white;
   font-weight: bold;
-  border: 5px solid #000000;
+  /* border: 5px solid #000000; */
   position: absolute;
   top: 50%;
   left: 50%;
@@ -47,35 +45,63 @@
   border-radius: 10px;
   -webkit-animation: fadein 4s;
   animation: fadein 4s;
-  
-  
+  padding: 120px 30px;
 }
 
 @keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
-.details p{
-  color:#FFD700;
-  font-family: Arial;
+.details p {
+  color: black;
   font-weight: bolder;
-  padding:5px;
+  font-size: 150%;
   transition: opacity 2s ease-in;
+  margin-bottom: 18px;
 }
 
-.details input{
-  border: 2px solid blue;
-  border-radius: 4px;
-   background-color: rgb(146, 175, 226);
+.submit-btn {
+  position: absolute;
+  left: 40%;
+  top: 80%;
+  cursor: pointer;
+  padding: 20px 30px 20px 30px;
+  background-color: #2bcbba;
+  font-family: "Righteous", cursive;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  font-size: 100%;
+  outline: none;
+  background: linear-gradient(to right, white 50%, #2bcbba 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all 0.3s ease-out;
 }
 
-
+.submit-btn:hover,
+.submit-btn:active {
+  background-position: left bottom;
+  color: #2bcbba;
+}
+.details input {
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(255, 255, 255);
+  width: 120%;
+  padding: 7px 0;
+}
+.radio-btn input {
+  width: 20%;
+  font-size: 130%;
+}
 .t1 {
-
-  width:35%;float: none;
-}
-
-.one {
-  
+  width: 35%;
+  float: none;
 }
