--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -6,6 +6,7 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 body {
   font-size: 24px;
@@ -116,7 +117,9 @@ header {
   background-position: right bottom;
   transition: all 0.3s ease-out;
 }
-
+a {
+  text-decoration: none;
+}
 .home-register {
   right: 15px;
 }
