--- a/resources/css/Booking.css
+++ b/resources/css/Booking.css
@@ -10,8 +10,11 @@
 body {
   font-size: 24px;
   font-family: "Righteous", cursive;
-  background: linear-gradient(45deg, #780206, #061161);
+  background: linear-gradient(to right, #232526, #414345);
+  /* background: rgb(230, 230, 230); */
   background-repeat: no-repeat;
+
+  /* background-image: url(/resources/css/img/LoginBG.jpg); */
 }
 
 section {
@@ -19,60 +22,161 @@ section {
 }
 
 .title {
-  color: #ececec;
-  font-size: 250%;
+  color: rgb(224, 224, 224);
+  font-size: 190%;
   text-align: center;
   font-family: "Righteous", cursive;
   text-shadow: 2px 2px 4px #000000;
-  padding-top: 50px;
-  font-weight: 700;
+  padding-top: 20px;
+  font-weight: 400;
+  margin-bottom: 12px;
+}
+
+h2::after {
+  display: block;
+  height: 2px;
+  background-color: white;
+  content: " ";
+  width: 100px;
+  margin: 0 auto;
+  margin-top: 5px;
 }
 
 .main-container {
-  left: 25%;
-
+  left: 5%;
   position: absolute;
+  color: white;
 }
 
 .add-btn,
 .rmv-btn,
 .sub-btn {
   padding: 10px 15px;
-  background-color: #2bcbba;
+  background-color: #10ac84;
   font-family: "Righteous", cursive;
   border: none;
   border-radius: 5px;
   color: white;
   cursor: pointer;
-  font-size: 80%;
+  font-size: 75%;
   outline: none;
-  background: linear-gradient(to right, white 50%, #2bcbba 50%);
+  background: linear-gradient(to right, white 50%, #10ac84 50%);
   background-size: 200% 100%;
   background-position: right bottom;
   transition: all 0.3s ease-out;
 }
 
-.add-btn:hover,
-.add-btn:active,
-.rmv-btn:hover,
-.rmv-btn:active,
 .sub-btn:hover,
 .sub-btn:active {
   background-position: left bottom;
-  color: #2bcbba;
+  color: #10ac84;
 }
 
-#members-container input {
+.add-btn:hover,
+.add-btn:active {
+  background-position: left bottom;
+  color: green;
+}
+
+.rmv-btn:hover,
+.rmv-btn:active {
+  background-position: left bottom;
+  color: red;
+}
+
+#members-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+#members input {
   display: block;
-  margin: 2px;
+  margin: 5px 15px 5px 5px;
   padding: 5px;
-  width: 130%;
+  width: 100%;
   font-family: "Lora";
   font-size: 18px;
   border: 2px solid white;
-  border-radius: 10px;
+  border-radius: 5px;
   box-sizing: border-box;
 }
-#members-container p {
-  margin-bottom: 30px;
+#members p {
+  margin-bottom: 20px;
 }
+#Gender {
+  margin-left: 20px;
+}
+
+#Gender select {
+  /* background-color: #10ac84;
+  color: white; */
+  width: 80%;
+  padding: 9px;
+  border-radius: 5px;
+  /* margin-top: 4px; */
+  font-weight: 600;
+  font-size: 14px;
+}
+.p-test {
+  margin-bottom: 2px;
+}
+
+#Gender select option {
+  border-radius: 5px;
+  font-weight: 600;
+}
+.added-gender,
+.added-age {
+  margin-top: 23px;
+}
+
+#Age input {
+  /* background-color: #10ac84; */
+  width: 100%;
+  padding: 9px;
+  border-radius: 5px;
+  /* margin-top: 4px; */
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.price-details {
+  position: absolute;
+  display: block;
+  left: 70%;
+  background-color: rgb(224, 224, 224);
+  width: 25%;
+  padding: 5px 5px 5px 10px;
+  border-radius: 3px;
+  font-weight: 100;
+  box-shadow: 5px 10px 18px #aaaaaa;
+}
+.price-details div {
+  margin: 0 0 5px 0;
+}
+
+/* .added-member.one {
+  animation: removed-item-animation 0.8s cubic-bezier(0.65, -0.02, 0.72, 0.29);
+}
+
+@keyframes removed-item-animation {
+  0% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+  30% {
+    opacity: 1;
+    transform: translateX(50px);
+  }
+
+  80% {
+    opacity: 1;
+    transform: translateX(-800px);
+  }
+
+  100% {
+    opacity: 0;
+    transform: translateX(-800px);
+  }
+} */
